docs: deep accuracy, completeness and tone review of the user-facing docs (#179)
* docs: point installation at GitHub Releases and correct artifact facts

The driver is not published to Maven Central — the `vc.tbc` group path 404s and
the Central index returns no results for it — so every Maven, Gradle and wget
snippet in the docs pointed at an artifact that does not exist. GitHub Releases
attaches all five artifacts on every release and is the working source.

- README, QUICKSTART, INTELLIJ: lead with a GitHub Releases download; keep the
  Maven/Gradle coordinates marked as reserved for the first Central release
- README and INTELLIJ pointed IntelliJ users at the classifier-less JAR, which
  holds driver classes only. Both now use the with-logging variant, matching
  what LOGGING.md already prescribed for IDEs
- Correct the build-artifact sizes (slim ~220 KB not 60K, shaded ~41 MB not
  51M, sources ~185 KB not 41K, javadoc ~610 KB not 267K) and add the
  with-logging variant, which the artifact list omitted
- Drop the Docker build requirement; there is no emulator tier or testcontainers
- Replace the dead tbc-bq-jdbc-examples link with the real integration tests
- Drop the unverifiable Simba size comparison from QUICKSTART

All release URLs verified live (HTTP 200) and checked against the version-bump
regexes in version-and-release.yml so they stay correct across releases.

Refs #159

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* docs(compatibility): correct the support matrix against the implementation

Every claim below was re-checked against src/main/java.

Corrections:
- "no stored procedures" contradicted the doc's own getProcedures() row.
  supportsStoredProcedures() returns true and routines are read from
  INFORMATION_SCHEMA; the real gap is CallableStatement
- getCatalogs() returns one row (the connection's project), not "Projects"
- getSchemas() is sequential; the parallel loading is in getTables/getColumns
- getFunctions, getFunc